--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ Quiconque ose pleurer un ennemi romain !</pre>
 
 <p class="author">Racine</p>
 <p class="book">Mithridate, Acte V Scène 5</p>
-<p class="comment">Mithridate à Monime et Xiphrès</p>
+<p class="comment">Mithridate à Monime et Xipharès</p>
 <pre class="quote">
 J'ai vengé l'univers autant que je l'ai pu:
 La mort dans ce projet m'a seule interrompu.
@@ -440,7 +440,7 @@ Mon cœur pour Xipharès vous les demande tous.</pre>
 
 <p class="author">Racine</p>
 <p class="book">Mithridate, Acte V Scène 5</p>
-<p class="comment">Mithridate à Monime et Xiphrès</p>
+<p class="comment">Mithridate à Monime et Xipharès</p>
 <pre class="quote">
 Mais je sens affaiblir ma force et mes esprits.
 Je sens que je me meurs. Approchez-vous, mon fils.
@@ -449,6 +449,144 @@ Venez, et recevez l'âme de Mithridate.</pre>
 
 <br/>
 <br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte I Scène 1</p>
+<p class="comment">Hyppolyte à Théramène</p>
+<pre class="quote">
+Cet heureux temps n'est plus. Tout a changé de face
+Depuis que sur ces bords les dieux ont envoyé
+La fille de Minos et de Pasiphaé.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte I Scène 1</p>
+<p class="comment">Phèdre à OEnone</p>
+<pre class="quote">
+Je le vis, je rougis, je pâlis à sa vue;
+Un trouble s'éleva dans mon âme éperdue;
+Mes yeux ne voyaient plus, je ne pouvais parler,
+Je sentis tout mon corps et transir et brûler.
+Je reconnus Vénus et ses feux redoutables,
+D'un sang qu'elle poursuit, tourments inévitables.</pre>
+<br/>
+<pre class="quote">
+Ce n'est plus une ardeur dans mes veines cachée:
+C'est Vénus toute entière à sa proie attachée.
+J'ai conçu pour mon crime une juste terreur.
+J'ai pris la vie en haine et ma flamme en horreur ;
+Je voulais en mourant prendre soin de ma gloire,
+Et dérober au jour une flamme si noire.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte III Scène 2</p>
+<p class="comment">Phèdre seule</p>
+<pre class="quote">
+O toi, qui vois la honte où je suis descendue,
+Implacable Vénus, suis-je assez confondue ?</pre>
+
+<br/>
+<br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte III Scène 6</p>
+<p class="comment">Hyppolyte</p>
+<pre class="quote">
+O toi, qui vois la honte où je suis descendue,
+Implacable Vénus, suis-je assez confondue ?</pre>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte IV Scène 2</p>
+<p class="comment">Hyppolyte à Thésée</p>
+<pre class="quote">
+Le jour n'est pas plus pur que le fond de mon coeur.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte IV Scène 6</p>
+<p class="comment">Phèdre à OEnone</p>
+<pre class="quote">
+Non, je ne puis souffrir un bonheur qui m'outrage,
+Oenone ; prends pitié de ma jalouse rage;
+Il faut perdre Aricie, il faut de mon époux
+Contre un sang odieux réveiller le courroux.
+Qu'il ne se borne pas à des peines légères:
+Le crime de la soeur passe celui des frères.
+Dans mes jaloux transports je le veux implorer.
+Que fais-je ? Où ma raison se va-t-elle égarer ?
+Moi jalouse ! Et Thésée est celui que j'implore !
+Mon époux est vivant, et moi je brûle encore !
+Pour qui ? Quel est le coeur où prétendent mes voeux ?
+Chaque mot sur mon front fait dresser mes cheveux.
+Mes crimes désormais ont comblé la mesure.
+Je respire à la fois l'inceste et l'imposture;
+Mes homicides mains, promptes à me venger
+Dans le sang innocent brûlent de se plonger.
+Misérable ! et je vis ? et je soutiens la vue
+De ce sacré soleil dont je suis descendue ?
+J'ai pour aïeul le père et le maître des dieux;
+Le ciel, tout l'univers est plein de mes aïeux;
+Où me cacher ? Fuyons dans la nuit infernale.
+Mais que dis-je ? Mon père y tient l'urne fatale;
+Le sort, dit-on, l'a mise en ses sévères mains:
+Minos juge aux enfers tous les pâles humains.
+Ah ! combien frémira son ombre épouvantée,
+Lorsqu'il verra sa fille à ses yeux présentée,
+Contrainte d'avouer tant de forfaits divers,
+Et des crimes peut-être inconnus aux enfers !
+Que diras-tu, mon père, à ce spectacle horrible ?
+Je crois voir de ta main tomber l'urne terrible,
+Je crois te voir, cherchant un supplice nouveau,
+Toi-même, de ton sang devenir le bourreau.
+Pardonne ! Un dieu cruel a perdu ta famille:
+Reconnais sa vengeance aux fureurs de ta fille.
+Hélas ! du crime affreux dont la honte me suit,
+Jamais mon triste coeur n'a recueilli le fruit;
+Jusqu'au dernier soupir de malheurs poursuivie,
+Je rends dans les tourments une pénible vie.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Racine</p>
+<p class="book">Phèdre, Acte IV Scène 6</p>
+<p class="comment">Phèdre</p>
+<pre class="quote">
+Qu'entends-je ? Quels conseils ose-t-on me donner ?
+Ainsi donc jusqu'au bout tu veux m'empoisonner,
+Malheureuse ? Voilà comme tu m'as perdue.
+Au jour que je fuyais c'est toi qui m'as rendue ;
+Tes prières m'ont fait oublier mon devoir;
+J'évitais Hippolyte, et tu me l'as fait voir.
+De quoi te chargeais-tu ? Pourquoi ta bouche impie
+A-t-elle, en l'accusant, osé noircir sa vie ?
+Il en mourra peut-être, et d'un père insensé
+Le sacrilège voeu peut-être est exaucé.
+Je ne t'écoute plus. Va-t'en, monstre exécrable;
+Va, laisse-moi le soin de mon sort déplorable.
+Puisse le juste ciel dignement te payer;
+Et puisse ton supplice à jamais effrayer
+Tous ceux qui, comme toi, par de lâches adresses,
+Des princes malheureux nourrissent les faiblesses,
+Les poussent au penchant où leur coeur est enclin,
+Et leur osent du crime aplanir le chemin !
+Détestables flatteurs, présent le plus funeste
+Que puisse faire aux rois la colère céleste !</pre>
+<br/>
+<p class="comment">OEnone</p>
+Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
+Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
+
+<br/>
+<br/>
+
 
 
 </body>
