--- a/index.html
+++ b/index.html
@@ -497,8 +497,11 @@ Implacable Vénus, suis-je assez confondue ?</pre>
 <p class="book">Phèdre, Acte III Scène 6</p>
 <p class="comment">Hyppolyte</p>
 <pre class="quote">
-O toi, qui vois la honte où je suis descendue,
-Implacable Vénus, suis-je assez confondue ?</pre>
+Dieux ! que dira le roi ! Quel funeste poison
+L'amour a répandu sur toute sa maison !</pre>
+
+<br/>
+<br/>
 
 <p class="author">Racine</p>
 <p class="book">Phèdre, Acte IV Scène 2</p>
@@ -581,7 +584,7 @@ Détestables flatteurs, présent le plus funeste
 Que puisse faire aux rois la colère céleste !</pre>
 <br/>
 <p class="comment">OEnone</p>
-Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
+<pre>Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
 Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
 
 <br/>
