--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Détestables flatteurs, présent le plus funeste
 Que puisse faire aux rois la colère céleste !</pre>
 <br/>
 <p class="comment">OEnone</p>
-<pre>Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
+<pre class="quote">Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
 Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
 
 <br/>
