--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="./style2.css">
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <body>
 <div id="headline">
-  <h1>Unordered list of quotations from sensible and often famous individuals that have struck a cord with me and which I try to remember.</h1>
+  <h1>Unordered list of quotations from sensible and often famous individuals that have struck a cord with me and which I try to remember</h1>
 </div>
 
 <p class="author">Paul Valéry</p>
@@ -463,7 +464,7 @@ La fille de Minos et de Pasiphaé.</pre>
 
 <p class="author">Racine</p>
 <p class="book">Phèdre, Acte I Scène 1</p>
-<p class="comment">Phèdre à OEnone</p>
+<p class="comment">Phèdre à Œnone</p>
 <pre class="quote">
 Je le vis, je rougis, je pâlis à sa vue;
 Un trouble s'éleva dans mon âme éperdue;
@@ -514,7 +515,7 @@ Le jour n'est pas plus pur que le fond de mon coeur.</pre>
 
 <p class="author">Racine</p>
 <p class="book">Phèdre, Acte IV Scène 6</p>
-<p class="comment">Phèdre à OEnone</p>
+<p class="comment">Phèdre à Œnone</p>
 <pre class="quote">
 Non, je ne puis souffrir un bonheur qui m'outrage,
 Oenone ; prends pitié de ma jalouse rage;
@@ -583,7 +584,7 @@ Et leur osent du crime aplanir le chemin !
 Détestables flatteurs, présent le plus funeste
 Que puisse faire aux rois la colère céleste !</pre>
 <br/>
-<p class="comment">OEnone</p>
+<p class="comment">Œnone</p>
 <pre class="quote">Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
 Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
 
