--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 
 <body>
 <div id="headline">
-  <h1>Unordered list of quotations from sensible and often famous individuals that have struck a cord with me and which I try to remember</h1>
+  <h1>Unordered (and growing) list of quotations from sensible and often famous individuals that have struck a cord with me and which I try to remember</h1>
 </div>
 
 <p class="author">Paul Valéry</p>
-<!-- <book>Paul Valéry</book> -->
-<!-- <comment>test</comment> -->
 <p class="quote">Toute race et toute terre qui a été successivement romanisée, christianisée, et soumise quant à l’esprit à la discipline des grecs, est absolument européenne.</p>
 
 <br/>
@@ -87,6 +85,11 @@ Les délices de Rome en devinrent l'horreur.</pre>
 
 <p class="author">Marguerite Yourcenar</p>
 <p class="book">Mémoires d'Hadrien</p>
+<p class="quote bullet">
+Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien)</p>
+
+<br/>
+
 <p class="quote bullet">
 Tout bonheur est un chef-d'oeuvre: la moindre erreur le fausse, la moindre hésitation l'altère, la moindre lourdeur le dépare, la moindre sottise l'abêtit.</p>
 
@@ -587,6 +590,123 @@ Que puisse faire aux rois la colère céleste !</pre>
 <p class="comment">Œnone</p>
 <pre class="quote">Ah ! dieux ! pour la servir j'ai tout fait, tout quitté,
 Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Marguerite Yourcenar</p>
+<p class="quote">Une génération assiste au sac de Rome, une autre au siège de Paris ou à celui de Stalingrad, une autre au pillage du palais d'été: la prise de Troie unifie en une seule image cette série d'instantanés tragiques, foyer central d'un incendie qui fait rage l'histoire, et la lamentation de toutes les vieilles mères que la chronique n'a pas eu le temps d'écouter crier trouve une voix dans la bouche édentée d'Hécube</p>
+
+<br/>
+<br/>
+
+<p class="author">Thucydides</p>
+<p class="book">La guerre du Pélopponèse</p>
+<p class="comment">Tome 10 - III, 17</p>
+<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme ; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
+
+<br/>
+<br/>
+
+<p class="author">Shakespeare</p>
+<p class="book">Romeo and Juliet, Act I Scene 5</p>
+<p class="comment">Romeo</p>
+<pre class="quote">
+(taking Juliet’s hand) If I profane with my unworthiest hand
+This holy shrine, the gentle sin is this:
+My lips, two blushing pilgrims, ready stand
+To smooth that rough touch with a tender kiss.</pre>
+<br/>
+<p class="comment">Juliet</p>
+<pre class="quote">
+Good pilgrim, you do wrong your hand too much,
+Which mannerly devotion shows in this,
+For saints have hands that pilgrims' hands do touch,
+And palm to palm is holy palmers' kiss.</pre>
+<br/>
+<p class="comment">Romeo</p>
+<pre class="quote">
+Have not saints lips, and holy palmers too ?</pre>
+<br/>
+<p class="comment">Juliet</p>
+<pre class="quote">
+Ay, pilgrim, lips that they must use in prayer.</pre>
+<br/>
+<p class="comment">Romeo</p>
+<pre class="quote">
+O, then, dear saint, let lips do what hands do.
+They pray; grant thou, lest faith turn to despair.</pre>
+<br/>
+<p class="comment">Juliet</p>
+<pre class="quote">
+Saints do not move, though grant for prayers' sake.</pre>
+<br/>
+<p class="comment">Romeo</p>
+<pre class="quote">
+Then move not, while my prayer’s effect I take.
+(He kisses her)
+Thus from my lips, by thine, my sin is purged.</pre>
+<br/>
+<p class="comment">Juliet</p>
+<pre class="quote">
+Then have my lips the sin that they have took.</pre>
+<br/>
+<p class="comment">Romeo</p>
+<pre class="quote">
+Sin from thy lips? O trespass sweetly urged!
+Give me my sin again.
+(They kiss again)</pre>
+<br/>
+<p class="comment">Juliet</p>
+<pre class="quote">
+You kiss by th' book.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Shakespeare</p>
+<p class="book">Romeo and Juliet</p>
+<p class="comment">Prologue</p>
+<pre class="quote">
+Two households, both alike in dignity,
+In fair Verona, where we lay our scene,
+From ancient grudge break to new mutiny,
+Where civil blood makes civil hands unclean.
+From forth the fatal loins of these two foes
+A pair of star-cross'd lovers take their life;
+Whose misadventured piteous overthrows
+Do with their death bury their parents' strife.
+The fearful passage of their death-mark'd love,
+And the continuance of their parents' rage,
+Which, but their children's end, nought could remove,
+Is now the two hours' traffic of our stage;
+The which if you with patient ears attend,
+What here shall miss, our toil shall strive to mend.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Shakespeare</p>
+<p class="book">Romeo and Juliet</p>
+<p class="comment">Act III Scene 3 - the Prince to the audience - Last line</p>
+<pre class="quote">
+A glooming peace this morning with it brings;
+The sun, for sorrow, will not show his head:
+Go hence, to have more talk of these sad things;
+Some shall be pardon'd, and some punished:
+For never was a story of more woe
+Than this of Juliet and her Romeo.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Лев Толстой</p>
+<p class="book">Война и мир</p>
+<p class="comment">Book IX, chapter 1</p>
+<p class="quote">A Frenchman is self-assured because he regards himself personally, both in mind and body, as irresistibly attractive to men and women. An Englishman is self-assured, as being a citizen of the best-organized state in the world, and therefore as an Englishman always knows what he should do and knows that all he does as an Englishman is undoubtedly correct. An Italian is self-assured because he is excitable and easily forgets himself and other people. A Russian is self-assured just because he knows nothing and does not want to know anything, since he does not believe that anything can be known. The German's self-assurance is worst of all, stronger and more repulsive than any other, because he imagines that he knows the truth — science — which he himself has invented but which is for him the absolute truth.</p>
+<br/>
+<p class="comment">onscreen final quotation, War and Peace (1956)</p>
+<p class="quote">The most difficult thing - but an essential one - is to love Life, to love it even while one suffers, because Life is all. Life is God, and to love Life means to love God.</p>
 
 <br/>
 <br/>
