--- a/index.html
+++ b/index.html
@@ -212,6 +212,20 @@ Je ne me querelle plus avec les médecins; leurs sots remèdes m'ont tué; mais 
 <br/>
 <br/>
 
+<p class="author">Marguerite Yourcenar</p>
+<p class="quote">Une génération assiste au sac de Rome, une autre au siège de Paris ou à celui de Stalingrad, une autre au pillage du palais d'été: la prise de Troie unifie en une seule image cette série d'instantanés tragiques, foyer central d'un incendie qui fait rage l'histoire, et la lamentation de toutes les vieilles mères que la chronique n'a pas eu le temps d'écouter crier trouve une voix dans la bouche édentée d'Hécube</p>
+
+<br/>
+<br/>
+
+<p class="author">Thucydides</p>
+<p class="book">La guerre du Pélopponèse</p>
+<p class="comment">Tome 10 - III, 17</p>
+<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme ; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
+
+<br/>
+<br/>
+
 <p class="author">Racine</p>
 <p class="book">Iphigénie, Acte IV Scène 1</p>
 <p class="comment">Eriphile à Doris</p>
@@ -594,20 +608,6 @@ Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
 <br/>
 <br/>
 
-<p class="author">Marguerite Yourcenar</p>
-<p class="quote">Une génération assiste au sac de Rome, une autre au siège de Paris ou à celui de Stalingrad, une autre au pillage du palais d'été: la prise de Troie unifie en une seule image cette série d'instantanés tragiques, foyer central d'un incendie qui fait rage l'histoire, et la lamentation de toutes les vieilles mères que la chronique n'a pas eu le temps d'écouter crier trouve une voix dans la bouche édentée d'Hécube</p>
-
-<br/>
-<br/>
-
-<p class="author">Thucydides</p>
-<p class="book">La guerre du Pélopponèse</p>
-<p class="comment">Tome 10 - III, 17</p>
-<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme ; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
-
-<br/>
-<br/>
-
 <p class="author">Shakespeare</p>
 <p class="book">Romeo and Juliet, Act I Scene 5</p>
 <p class="comment">Romeo</p>
@@ -688,7 +688,7 @@ What here shall miss, our toil shall strive to mend.</pre>
 
 <p class="author">Shakespeare</p>
 <p class="book">Romeo and Juliet</p>
-<p class="comment">Act III Scene 3 - the Prince to the audience - Last line</p>
+<p class="comment">Act III Scene 3, the Prince to the audience, Last line</p>
 <pre class="quote">
 A glooming peace this morning with it brings;
 The sun, for sorrow, will not show his head:
@@ -705,7 +705,7 @@ Than this of Juliet and her Romeo.</pre>
 <p class="comment">Book IX, chapter 1</p>
 <p class="quote">A Frenchman is self-assured because he regards himself personally, both in mind and body, as irresistibly attractive to men and women. An Englishman is self-assured, as being a citizen of the best-organized state in the world, and therefore as an Englishman always knows what he should do and knows that all he does as an Englishman is undoubtedly correct. An Italian is self-assured because he is excitable and easily forgets himself and other people. A Russian is self-assured just because he knows nothing and does not want to know anything, since he does not believe that anything can be known. The German's self-assurance is worst of all, stronger and more repulsive than any other, because he imagines that he knows the truth — science — which he himself has invented but which is for him the absolute truth.</p>
 <br/>
-<p class="comment">onscreen final quotation, War and Peace (1956)</p>
+<p class="comment">Onscreen final quotation, War and Peace (1956)</p>
 <p class="quote">The most difficult thing - but an essential one - is to love Life, to love it even while one suffers, because Life is all. Life is God, and to love Life means to love God.</p>
 
 <br/>
