--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Les délices de Rome en devinrent l'horreur.</pre>
 <p class="author">Marguerite Yourcenar</p>
 <p class="book">Mémoires d'Hadrien</p>
 <p class="quote bullet">
-Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien)</p>
+Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (Extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien')</p>
 
 <br/>
 
