--- a/index.html
+++ b/index.html
@@ -711,6 +711,32 @@ Than this of Juliet and her Romeo.</pre>
 <br/>
 <br/>
 
+<p class="author">Homer</p>
+<p class="book">Iliad</p>
+<p class="comment">First Lines</p>
+<pre class="quote">
+Sing, Muse, sing of the wrath of Achilles, son of Peleus —
+that murderous rage which condemned Achaeans
+to countless agonies and threw many warrior souls
+deep into Hades, leaving their dead bodies
+carrion food for dogs and birds —
+all in fulfilment of the will of Zeus.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Homer</p>
+<p class="book">Odyssey</p>
+<p class="comment">First Lines</p>
+<pre class="quote">
+Sing to me, Muse, about the man of many twists and turns,
+who travelled far and wide after he sacked the famous town of Troy.
+He saw the towns and learned the minds of many distant men,
+and weathered many bitter nights and days in his deep heart at sea, 
+striving for his life and his companions' return.</pre>
+
+<br/>
+<br/>
 
 
 </body>
