--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Je ne méprise pas les hommes. Si je le faisais, je n'aurais aucun droit, ni auc
 <br/>
 
 <p class="quote bullet">
-Presque tous méconnaissent également leur juste liberté et leur vraie servitude... 
+Presque tous méconnaissent également leur juste liberté et leur vraie servitude...
 Pour moi, j'ai cherché la liberté plus que la puissance, et la puissance seulement parce qu'en partie elle favorisait la liberté.</p>
 
 <br/>
@@ -188,12 +188,12 @@ Chaque homme à éternellement à choisir, au cours de sa vie brève, entre l'es
 
 <p class="quote bullet">
 Je vois une objection à tout effort pour améliorer la condition humaine: C'est que les hommes en sont peut-être indignes.</p>
- 
+
 <br/>
 
 <p class="quote bullet">
 Toute loi trop souvent transgressée est mauvaise: C'est au législateur à l'abroger ou à la changer, de peur que le mépris où cette folle ordonnance est tombée ne s'étende à d'autres lois plus justes.</p>
- 
+
 <br/>
 
 <p class="quote bullet">
@@ -203,7 +203,7 @@ Construire, c'est collaborer avec la terre : C'est mettre une marque humaine sur
 
 <p class="quote bullet">
 La possibilité de jeter le masque en toutes choses est l'un des rares avantages que je trouve à vieillir.</p>
- 
+
 <br/>
 
 <p class="quote bullet">
@@ -732,11 +732,29 @@ all in fulfilment of the will of Zeus.</pre>
 Sing to me, Muse, about the man of many twists and turns,
 who travelled far and wide after he sacked the famous town of Troy.
 He saw the towns and learned the minds of many distant men,
-and weathered many bitter nights and days in his deep heart at sea, 
+and weathered many bitter nights and days in his deep heart at sea,
 striving for his life and his companions' return.</pre>
 
 <br/>
 <br/>
 
+<p class="author">Katharine Lee Bates</p>
+<p class="book">America the Beautiful</p>
+<p class="comment">Extract, 1893</p>
+<pre class="quote">
+America! America !
+God shed His grace on thee
+Till selfish gain no longer stain,
+The banner of the free !</pre>
+<br/>
+<p class="comment">Extract, 1904</p>
+<pre class="quote">
+America! America !
+May God thy gold refine
+Till all success be nobleness,
+And ev'ry gain divine.</pre>
+
+<br/>
+<br/>
 
 </body>
