--- a/index.html
+++ b/index.html
@@ -703,7 +703,8 @@ Than this of Juliet and her Romeo.</pre>
 <p class="author">Лев Толстой</p>
 <p class="book">Война и мир</p>
 <p class="comment">Book IX, chapter 1</p>
-<p class="quote">A Frenchman is self-assured because he regards himself personally, both in mind and body, as irresistibly attractive to men and women. An Englishman is self-assured, as being a citizen of the best-organized state in the world, and therefore as an Englishman always knows what he should do and knows that all he does as an Englishman is undoubtedly correct. An Italian is self-assured because he is excitable and easily forgets himself and other people. A Russian is self-assured just because he knows nothing and does not want to know anything, since he does not believe that anything can be known. The German's self-assurance is worst of all, stronger and more repulsive than any other, because he imagines that he knows the truth — science — which he himself has invented but which is for him the absolute truth.</p>
+<p class="quote">
+A Frenchman is self-assured because he regards himself personally, both in mind and body, as irresistibly attractive to men and women. An Englishman is self-assured, as being a citizen of the best-organized state in the world, and therefore as an Englishman always knows what he should do and knows that all he does as an Englishman is undoubtedly correct. An Italian is self-assured because he is excitable and easily forgets himself and other people. A Russian is self-assured just because he knows nothing and does not want to know anything, since he does not believe that anything can be known. The German's self-assurance is worst of all, stronger and more repulsive than any other, because he imagines that he knows the truth — science — which he himself has invented but which is for him the absolute truth.</p>
 <br/>
 <p class="comment">Onscreen final quotation, War and Peace (1956)</p>
 <p class="quote">The most difficult thing - but an essential one - is to love Life, to love it even while one suffers, because Life is all. Life is God, and to love Life means to love God.</p>
@@ -756,5 +757,20 @@ And ev'ry gain divine.</pre>
 
 <br/>
 <br/>
+
+<p class="author">Victor Hugo</p>
+<p class="book">Les Misérables</p>
+<p class="comment">Livre V, Chapitre 4</p>
+<pre class="quote">
+Le suprême bonheur de la vie, c’est la conviction qu’on est aimé ;
+aimé pour soi-même, disons mieux, aimé malgré soi-même.</pre>
+
+<br/>
+<br/>
+
+
+
+
+
 
 </body>
