--- a/index.html
+++ b/index.html
@@ -768,6 +768,17 @@ aimé pour soi-même, disons mieux, aimé malgré soi-même.</pre>
 <br/>
 <br/>
 
+<p class="author">Shakespeare</p>
+<p class="book">Hamlet</p>
+<p class="comment">Act I, Scene 3</p>
+<pre class="quote">
+This above all- to thine own self be true,
+And it must follow, as the night the day,
+Thou canst not then be false to any man.</pre>
+
+<br/>
+<br/>
+
 
 
 
