--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Finds and shall find me unafraid.
 
 It matters not how strait the gate,
 How charged with punishments the scroll.
-I am the master of my fate:
+I am the master of my fate,
 I am the captain of my soul.</pre>
 
 <br/>
