--- a/index.html
+++ b/index.html
@@ -779,9 +779,12 @@ Thou canst not then be false to any man.</pre>
 <br/>
 <br/>
 
+<p class="author">Eric Hoffer</p>
+<pre class="quote">When people are free to do as they please, they usually imitate each other.</pre>
 
 
-
+<br/>
+<br/>
 
 
 </body>
