--- a/index.html
+++ b/index.html
@@ -782,9 +782,20 @@ Thou canst not then be false to any man.</pre>
 <p class="author">Eric Hoffer</p>
 <pre class="quote">When people are free to do as they please, they usually imitate each other.</pre>
 
-
 <br/>
 <br/>
 
+<p class="author">Sophocles</p>
+<p class="book">Antigone</p>
+<p class="comment">Exode</p>
+<pre class="quote">
+Le plus haut bien pour l'homme est la vertu sereine;
+Qui méconnaît ses lois appelle les malheurs.
+L'audacieux mortel que son orgueil entraîne
+A braver dans les dieux leur force souveraine,
+S'il prétend l'ignorer, l'apprendra par les pleurs.</pre>
+
+<br/>
+<br/>
 
 </body>
