--- a/index.html
+++ b/index.html
@@ -798,4 +798,14 @@ S'il prétend l'ignorer, l'apprendra par les pleurs.</pre>
 <br/>
 <br/>
 
+<p class="author">Will Durant</p>
+<p class="book">The Story of Philosophy</p>
+<p class="comment">Summary of Aristotle's thoughts</p>
+<pre class="quote">
+We are what we repeatedly do.
+Excellence, then, is not an act, but a habit.</pre>
+
+<br/>
+<br/>
+
 </body>
