--- a/index.html
+++ b/index.html
@@ -808,4 +808,11 @@ Excellence, then, is not an act, but a habit.</pre>
 <br/>
 <br/>
 
+<p class="author">Benjamin Franklin</p>
+<pre class="quote">
+Genius without education is like silver in the mine.</pre>
+
+<br/>
+<br/>
+
 </body>
