--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@ L'un et l'autre une fois nous nous parlions sans feinte ?</pre>
 <p class="book">Britannicus, Acte I Scène 1</p>
 <p class="comment">Agrippine de Néron</p>
 <pre class="quote">
-Il commence, il est vrai par où finit Auguste ;
+Il commence, il est vrai par où finit Auguste;
 Mais crains que, l'avenir détruisant le passé,
 Il ne finisse ainsi qu'Auguste a commencé.
 Il se déguise en vain : je lis sur son visage
-Des fiers Domitius l'humeur triste et sauvage ;
+Des fiers Domitius l'humeur triste et sauvage;
 Il mêle avec l'orgueil qu'il a pris dans leur sang
 La fierté des Nérons qu'il puisa dans mon flanc.
 Toujours la tyrannie a d'heureuses prémices :
-De Rome, pour un temps, Caius fut les délices ;
+De Rome, pour un temps, Caius fut les délices;
 Mais, sa feinte bonté se tournant en fureur,
 Les délices de Rome en devinrent l'horreur.</pre>
 
@@ -85,8 +85,7 @@ Les délices de Rome en devinrent l'horreur.</pre>
 
 <p class="author">Marguerite Yourcenar</p>
 <p class="book">Mémoires d'Hadrien</p>
-<p class="quote bullet">
-Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (Extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien')</p>
+<p class="quote bullet">Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (Extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien')</p>
 
 <br/>
 
@@ -221,7 +220,7 @@ Je ne me querelle plus avec les médecins; leurs sots remèdes m'ont tué; mais 
 <p class="author">Thucydides</p>
 <p class="book">La guerre du Pélopponèse</p>
 <p class="comment">Tome 10 - III, 17</p>
-<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme ; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
+<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
 
 <br/>
 <br/>
@@ -235,7 +234,7 @@ Qui ne connaît de pleurs que ceux qu'il fait répandre,
 Qui s'endurcit contre eux dès l'âge le plus tendre
 Et qui, si l'on nous fait un fidèle discours,
 Suça même le sang des lions et des ours,
-Pour elle de la crainte a fait l'apprentissage ;
+Pour elle de la crainte a fait l'apprentissage;
 Elle l'a vu pleurer et changer de visage.</pre>
 
 <br/>
@@ -257,14 +256,14 @@ Et toujours de la gloire évitant le sentier,
 Ne laisser aucun nom, et mourir tout entier ?
 Ah ! ne nous formons point ces indignes obstacles.
 L'honneur parle, il suffit : ce sont là nos oracles.
-Les Dieux sont de nos jours les maîtres souverains ;
+Les Dieux sont de nos jours les maîtres souverains;
 Mais, Seigneur, notre gloire est dans nos propres mains.
 Pourquoi nous tourmenter de leurs ordres suprêmes ?
 Ne songeons qu'à nous rendre immortels comme eux-mêmes,
 Et laissant faire au sort, courons où la valeur
 Nous promet un destin aussi grand que le leur.
-C'est à Troie, et j'y cours ; et quoi qu'on me prédise,
-Je ne demande aux Dieux qu'un vent qui m'y conduise ;
+C'est à Troie, et j'y cours; et quoi qu'on me prédise,
+Je ne demande aux Dieux qu'un vent qui m'y conduise;
 Et quand moi seul enfin il faudrait l'assiéger,
 Patrocle et moi, Seigneur, nous irons vous venger.</pre>
 
@@ -295,7 +294,7 @@ Je ne le connais plus que pour votre assassin.</pre>
 <br/>
 <p class="comment">Iphigénie</p>
 <pre class="quote">
-C'est mon père, Seigneur, je vous le dis encore ;
+C'est mon père, Seigneur, je vous le dis encore;
 Mais un père que j'aime, un père que j'adore,
 Qui me chérit lui−même, et dont jusqu'à ce jour,
 Je n'ai jamais reçu que des marques d'amour.
@@ -321,7 +320,7 @@ Doit−il de votre haine être encore accablé ?</pre>
 Quoi, Madame ! parmi tant de sujets de crainte,
 Ce sont là les frayeurs dont vous êtes atteinte ?
 Un cruel (comment puis−je autrement l'appeler ? )
-Par la main de Calchas s'en va vous immoler ;
+Par la main de Calchas s'en va vous immoler;
 Et lorsqu'à sa fureur j'oppose ma tendresse,
 Le soin de son repos est le seul qui vous presse ?
 On me ferme la bouche ! on l'excuse ! on le plaint !
@@ -343,16 +342,16 @@ Mon sang fût le premier que vous dussiez verser.
 Non que la peur du coup dont je suis menacée
 Me fasse rappeler votre bonté passée.
 Ne craignez rien. Mon coeur, de votre honneur jaloux,
-Ne fera point rougir un père tel que vous ;
+Ne fera point rougir un père tel que vous;
 Et si je n'avais eu que ma vie à défendre,
 J'aurais su renfermer un souvenir si tendre.
 Mais à mon triste sort, vous le savez, Seigneur,
 Une mère, un amant, attachaient leur bonheur.
 Un roi digne de vous a cru voir la journée
-Qui devait éclairer notre illustre hyménée ;
+Qui devait éclairer notre illustre hyménée;
 Déjà, sûr de mon coeur à sa flamme promis,
-Il s'estimait heureux ; vous me l'aviez permis.
-Il sait votre dessein ; jugez de ses alarmes.
+Il s'estimait heureux; vous me l'aviez permis.
+Il sait votre dessein; jugez de ses alarmes.
 Ma mère est devant vous, et vous voyez ses larmes.
 Pardonnez aux efforts que je viens de tenter
 Pour prévenir les pleurs que je leur vais coûter.</pre>
@@ -494,7 +493,7 @@ D'un sang qu'elle poursuit, tourments inévitables.</pre>
 Ce n'est plus une ardeur dans mes veines cachée:
 C'est Vénus toute entière à sa proie attachée.
 J'ai conçu pour mon crime une juste terreur.
-J'ai pris la vie en haine et ma flamme en horreur ;
+J'ai pris la vie en haine et ma flamme en horreur;
 Je voulais en mourant prendre soin de ma gloire,
 Et dérober au jour une flamme si noire.</pre>
 
@@ -535,7 +534,7 @@ Le jour n'est pas plus pur que le fond de mon coeur.</pre>
 <p class="comment">Phèdre à Œnone</p>
 <pre class="quote">
 Non, je ne puis souffrir un bonheur qui m'outrage,
-Oenone ; prends pitié de ma jalouse rage;
+Oenone; prends pitié de ma jalouse rage;
 Il faut perdre Aricie, il faut de mon époux
 Contre un sang odieux réveiller le courroux.
 Qu'il ne se borne pas à des peines légères:
@@ -583,7 +582,7 @@ Je rends dans les tourments une pénible vie.</pre>
 Qu'entends-je ? Quels conseils ose-t-on me donner ?
 Ainsi donc jusqu'au bout tu veux m'empoisonner,
 Malheureuse ? Voilà comme tu m'as perdue.
-Au jour que je fuyais c'est toi qui m'as rendue ;
+Au jour que je fuyais c'est toi qui m'as rendue;
 Tes prières m'ont fait oublier mon devoir;
 J'évitais Hippolyte, et tu me l'as fait voir.
 De quoi te chargeais-tu ? Pourquoi ta bouche impie
