--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I am the captain of my soul.</pre>
 <p class="book">Britannicus, Acte I Scène 4</p>
 <p class="comment">Narcisse à Britannicus</p>
 <pre class="quote">
-Ce palais retentit en vain de vos regrets :
+Ce palais retentit en vain de vos regrets:
 Tandis qu'on vous verra d'une voix suppliante
 Semer ici la plainte et non pas l'épouvante,
 Que vos ressentiments se perdront en discours,
@@ -71,11 +71,11 @@ L'un et l'autre une fois nous nous parlions sans feinte ?</pre>
 Il commence, il est vrai par où finit Auguste;
 Mais crains que, l'avenir détruisant le passé,
 Il ne finisse ainsi qu'Auguste a commencé.
-Il se déguise en vain : je lis sur son visage
+Il se déguise en vain: je lis sur son visage
 Des fiers Domitius l'humeur triste et sauvage;
 Il mêle avec l'orgueil qu'il a pris dans leur sang
 La fierté des Nérons qu'il puisa dans mon flanc.
-Toujours la tyrannie a d'heureuses prémices :
+Toujours la tyrannie a d'heureuses prémices:
 De Rome, pour un temps, Caius fut les délices;
 Mais, sa feinte bonté se tournant en fureur,
 Les délices de Rome en devinrent l'horreur.</pre>
@@ -85,128 +85,104 @@ Les délices de Rome en devinrent l'horreur.</pre>
 
 <p class="author">Marguerite Yourcenar</p>
 <p class="book">Mémoires d'Hadrien</p>
-<p class="quote bullet">Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (Extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien')</p>
+<p class="quote">Les dieux n'étant plus et le Christ n'étant pas encore, il y a eu, de Cicéron à Marc Aurèle, un moment unique où l'homme seul a été seul. (Extrait de la correspondance de Flaubert qui est à l'origine des 'Mémoires d'Hadrien')</p>
 
 <br/>
 
-<p class="quote bullet">
-Tout bonheur est un chef-d'oeuvre: la moindre erreur le fausse, la moindre hésitation l'altère, la moindre lourdeur le dépare, la moindre sottise l'abêtit.</p>
+<p class="quote">Tout bonheur est un chef-d'oeuvre: la moindre erreur le fausse, la moindre hésitation l'altère, la moindre lourdeur le dépare, la moindre sottise l'abêtit.</p>
 
 <br/>
 
-<p class="quote bullet">
-Notre grande erreur est d'essayer d'obtenir de chacun en particulier les vertus qu'il n'a pas, et de négliger de cultiver celles qu'il possède.</p>
+<p class="quote">Notre grande erreur est d'essayer d'obtenir de chacun en particulier les vertus qu'il n'a pas, et de négliger de cultiver celles qu'il possède.</p>
 
 <br/>
 
-<p class="quote bullet">
-Ce matin l'idée m'est venue pour la première fois, que mon corps, ce fidèle compagnon, cet ami plus sûr, mieux connu de moi que mon âme, n'est qu'un monstre sournois qui finira par dévorer son maître.</p>
+<p class="quote">Ce matin l'idée m'est venue pour la première fois, que mon corps, ce fidèle compagnon, cet ami plus sûr, mieux connu de moi que mon âme, n'est qu'un monstre sournois qui finira par dévorer son maître.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je cherchai d'abord une simple liberté de vacances, des moments libres. Toute vie bien réglée a les siens, et qui ne sait pas le provoquer ne sait pas vivre.</p>
+<p class="quote">Je cherchai d'abord une simple liberté de vacances, des moments libres. Toute vie bien réglée a les siens, et qui ne sait pas le provoquer ne sait pas vivre.</p>
 
 <br/>
 
-<p class="quote bullet">
-La petite troupe (...) avait la plus haute forme de vertu, la seule que je supporte encore, la ferme détermination d'être utile.</p>
+<p class="quote">La petite troupe (...) avait la plus haute forme de vertu, la seule que je supporte encore, la ferme détermination d'être utile.</p>
 
 <br/>
 
-<p class="quote bullet">
-C'est insulter les autres que de paraître dédaigner leurs joies.</p>
+<p class="quote">C'est insulter les autres que de paraître dédaigner leurs joies.</p>
 
 <br/>
 
-<p class="quote bullet">
-César avait raison de préférer la première place dans un village à la seconde à Rome. Non par ambition, ou par vaine gloire, mais parce que l'homme placé en second n'a le choix qu'entre les dangers de l'obéissance, ceux de la révolte, et ceux, plus graves, du compromis.</p>
+<p class="quote">César avait raison de préférer la première place dans un village à la seconde à Rome. Non par ambition, ou par vaine gloire, mais parce que l'homme placé en second n'a le choix qu'entre les dangers de l'obéissance, ceux de la révolte, et ceux, plus graves, du compromis.</p>
 
 <br/>
 
-<p class="quote bullet">
-Il me déplaît qu'une créature croie pouvoir escompter mon désir, le prévoir, mécaniquement s'adapter à ce qu'elle suppose mon choix. Ce reflet imbécile et déformé de moi-même que m'offre à ces moments une cervelle humaine me ferait préférer à ces moments les tristes effets de l'ascétisme.</p>
+<p class="quote">Il me déplaît qu'une créature croie pouvoir escompter mon désir, le prévoir, mécaniquement s'adapter à ce qu'elle suppose mon choix. Ce reflet imbécile et déformé de moi-même que m'offre à ces moments une cervelle humaine me ferait préférer à ces moments les tristes effets de l'ascétisme.</p>
 
 <br/>
 
-<p class="quote bullet">
-Ce qui nous rassure du sommeil, c'est qu'on en sort, et qu'on en sort inchangé, puisqu'une interdiction bizarre nous empêche de rapporter avec nous l'exact résidu de nos songes.</p>
+<p class="quote">Ce qui nous rassure du sommeil, c'est qu'on en sort, et qu'on en sort inchangé, puisqu'une interdiction bizarre nous empêche de rapporter avec nous l'exact résidu de nos songes.</p>
 
 <br/>
 
-<p class="quote bullet">
-Tout ce que les hommes ont dit de mieux a été dit en grec.</p>
+<p class="quote">Tout ce que les hommes ont dit de mieux a été dit en grec.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je ne suis pas encore assez faible pour céder aux imaginations de la peur, presque aussi absurdes que celles de l'espérance, et assurément beaucoup plus pénibles... Je n'en suis pas moins arrivé à l'âge où la vie, pour chaque homme, est une défaite acceptée.</p>
+<p class="quote">Je ne suis pas encore assez faible pour céder aux imaginations de la peur, presque aussi absurdes que celles de l'espérance, et assurément beaucoup plus pénibles... Je n'en suis pas moins arrivé à l'âge où la vie, pour chaque homme, est une défaite acceptée.</p>
 
 <br/>
 
-<p class="quote bullet">
-L'homme qui ne dort pas, je n'ai depuis quelques mois que trop d'occasions de le constater sur moi-même, se refuse plus ou moins consciemment à faire confiance au flot des choses.</p>
+<p class="quote">L'homme qui ne dort pas, je n'ai depuis quelques mois que trop d'occasions de le constater sur moi-même, se refuse plus ou moins consciemment à faire confiance au flot des choses.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je m'accommoderais fort mal d'un monde sans livres, mais la réalité n'est pas là, parce qu'elle n'y tient pas tout entière.</p>
+<p class="quote">Je m'accommoderais fort mal d'un monde sans livres, mais la réalité n'est pas là, parce qu'elle n'y tient pas tout entière.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je ne méprise pas les hommes. Si je le faisais, je n'aurais aucun droit, ni aucune raison, d'essayer de les gouverner. Je les sais vains, ignorants, avides, inquiets, capables de presque tout pour réussir, pour se faire valoir, même à leurs propres yeux, ou tout simplement pour éviter de souffrir. Je le sais : je suis comme eux, du moins par moments, ou j'aurais pu l'être.</p>
+<p class="quote">Je ne méprise pas les hommes. Si je le faisais, je n'aurais aucun droit, ni aucune raison, d'essayer de les gouverner. Je les sais vains, ignorants, avides, inquiets, capables de presque tout pour réussir, pour se faire valoir, même à leurs propres yeux, ou tout simplement pour éviter de souffrir. Je le sais: je suis comme eux, du moins par moments, ou j'aurais pu l'être.</p>
 
 <br/>
 
-<p class="quote bullet">
-Presque tous méconnaissent également leur juste liberté et leur vraie servitude...
+<p class="quote">Presque tous méconnaissent également leur juste liberté et leur vraie servitude...
 Pour moi, j'ai cherché la liberté plus que la puissance, et la puissance seulement parce qu'en partie elle favorisait la liberté.</p>
 
 <br/>
 
-<p class="quote bullet">
-J'ai compris que peu d'hommes se réalisent avant de mourir.</p>
+<p class="quote">J'ai compris que peu d'hommes se réalisent avant de mourir.</p>
 
 <br/>
 
-<p class="quote bullet">
-Quand on aura allégé le plus possible les servitudes inutiles, évité les malheurs non nécessaires, il restera toujours, pour tenir en haleine les vertus héroïques de l'homme, la longue série des maux véritables, la mort, la vieillesse, les maladies non guérissables, l'amour non partagé, l'amitié rejetée ou trahie, la médiocrité d'une vie moins vaste que nos projets et plus terne que nos songes: tous les malheurs causés par la divine nature des choses.</p>
+<p class="quote">Quand on aura allégé le plus possible les servitudes inutiles, évité les malheurs non nécessaires, il restera toujours, pour tenir en haleine les vertus héroïques de l'homme, la longue série des maux véritables, la mort, la vieillesse, les maladies non guérissables, l'amour non partagé, l'amitié rejetée ou trahie, la médiocrité d'une vie moins vaste que nos projets et plus terne que nos songes: tous les malheurs causés par la divine nature des choses.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je doute que toute la philosophie du monde parvienne à supprimer l’esclavage : on en changera tout au plus le nom.</p>
+<p class="quote">Je doute que toute la philosophie du monde parvienne à supprimer l’esclavage: on en changera tout au plus le nom.</p>
 
 <br/>
 
-<p class="quote bullet">
-Chaque homme à éternellement à choisir, au cours de sa vie brève, entre l'espoir infatigable et la sage absence d'espérance, entre les délices du chaos et celles de la stabilité, entre le Titan et l'Olympien.</p>
+<p class="quote">Chaque homme à éternellement à choisir, au cours de sa vie brève, entre l'espoir infatigable et la sage absence d'espérance, entre les délices du chaos et celles de la stabilité, entre le Titan et l'Olympien.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je vois une objection à tout effort pour améliorer la condition humaine: C'est que les hommes en sont peut-être indignes.</p>
+<p class="quote">Je vois une objection à tout effort pour améliorer la condition humaine: C'est que les hommes en sont peut-être indignes.</p>
 
 <br/>
 
-<p class="quote bullet">
-Toute loi trop souvent transgressée est mauvaise: C'est au législateur à l'abroger ou à la changer, de peur que le mépris où cette folle ordonnance est tombée ne s'étende à d'autres lois plus justes.</p>
+<p class="quote">Toute loi trop souvent transgressée est mauvaise: C'est au législateur à l'abroger ou à la changer, de peur que le mépris où cette folle ordonnance est tombée ne s'étende à d'autres lois plus justes.</p>
 
 <br/>
 
-<p class="quote bullet">
-Construire, c'est collaborer avec la terre : C'est mettre une marque humaine sur un paysage qui en sera modifié à jamais.</p>
+<p class="quote">Construire, c'est collaborer avec la terre: C'est mettre une marque humaine sur un paysage qui en sera modifié à jamais.</p>
 
 <br/>
 
-<p class="quote bullet">
-La possibilité de jeter le masque en toutes choses est l'un des rares avantages que je trouve à vieillir.</p>
+<p class="quote">La possibilité de jeter le masque en toutes choses est l'un des rares avantages que je trouve à vieillir.</p>
 
 <br/>
 
-<p class="quote bullet">
-Je ne me querelle plus avec les médecins; leurs sots remèdes m'ont tué; mais leur présomption, leur pédantisme hypocrite est notre oeuvre: Ils mentiraient moins si nous n'avions pas si peur de souffrir. </p>
+<p class="quote">Je ne me querelle plus avec les médecins; leurs sots remèdes m'ont tué; mais leur présomption, leur pédantisme hypocrite est notre oeuvre: Ils mentiraient moins si nous n'avions pas si peur de souffrir.</p>
 
 <br/>
 <br/>
@@ -220,7 +196,7 @@ Je ne me querelle plus avec les médecins; leurs sots remèdes m'ont tué; mais 
 <p class="author">Thucydides</p>
 <p class="book">La guerre du Pélopponèse</p>
 <p class="comment">Tome 10 - III, 17</p>
-<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira : ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
+<p class="quote">À l'audition, l'absence de merveilleux dans les faits rapportés paraîtra sans doute en diminuer le charme; mais, si l'on veut voir clair dans les événements passés et dans ceux qui, à l'avenir, en vertu du caractère humain qui est le leur, présenteront des similitudes ou des analogies, qu'alors, on les juge utiles, et cela suffira: ils constituent un trésor pour toujours, plutôt qu'une production d'apparat pour un auditoire du moment.</p>
 
 <br/>
 <br/>
@@ -245,7 +221,7 @@ Elle l'a vu pleurer et changer de visage.</pre>
 <p class="comment">Achille à Agamemnon</p>
 <pre class="quote">
 Les Parques à ma mère, il est vrai, l'ont prédit,
-Lorsqu'un époux mortel fut reçu dans son lit :
+Lorsqu'un époux mortel fut reçu dans son lit:
 Je puis choisir, dit-on, ou beaucoup d'ans sans gloire,
 Ou peu de jours suivis d'une longue mémoire.
 Mais, puisqu'il faut enfin que j'arrive au tombeau,
@@ -255,7 +231,7 @@ Attendre chez mon père une obscure vieillesse,
 Et toujours de la gloire évitant le sentier,
 Ne laisser aucun nom, et mourir tout entier ?
 Ah ! ne nous formons point ces indignes obstacles.
-L'honneur parle, il suffit : ce sont là nos oracles.
+L'honneur parle, il suffit: ce sont là nos oracles.
 Les Dieux sont de nos jours les maîtres souverains;
 Mais, Seigneur, notre gloire est dans nos propres mains.
 Pourquoi nous tourmenter de leurs ordres suprêmes ?
@@ -448,7 +424,7 @@ Il épargne à ma mort leur présence importune.
 Que ne puis-je payer ce service important
 De tout ce que mon trône eut de plus éclatant!
 Mais vous me tenez lieu d'empire, de couronne;
-Vous seule me restez : souffrez que je vous donne,
+Vous seule me restez: souffrez que je vous donne,
 Madame, et tous ces vœux que j'exigeais de vous,
 Mon cœur pour Xipharès vous les demande tous.</pre>
 
@@ -611,7 +587,8 @@ Et j'en reçois ce prix ? Je l'ai bien mérité.</pre>
 <p class="book">Romeo and Juliet, Act I Scene 5</p>
 <p class="comment">Romeo</p>
 <pre class="quote">
-(taking Juliet’s hand) If I profane with my unworthiest hand
+(taking Juliet’s hand)
+If I profane with my unworthiest hand
 This holy shrine, the gentle sin is this:
 My lips, two blushing pilgrims, ready stand
 To smooth that rough touch with a tender kiss.</pre>
@@ -742,17 +719,31 @@ striving for his life and his companions' return.</pre>
 <p class="book">America the Beautiful</p>
 <p class="comment">Extract, 1893</p>
 <pre class="quote">
-America! America !
+America! America!
 God shed His grace on thee
 Till selfish gain no longer stain,
-The banner of the free !</pre>
+The banner of the free!
+
+America! America!
+God shed His grace on thee
+Till nobler men keep once again
+Thy whiter jubilee!
+</pre>
+
 <br/>
+
 <p class="comment">Extract, 1904</p>
 <pre class="quote">
-America! America !
+America! America!
 May God thy gold refine
 Till all success be nobleness,
-And ev'ry gain divine.</pre>
+And ev'ry gain divine.
+
+America! America!
+God shed His grace on thee,
+And crown thy good with brotherhood
+From sea to shining sea.
+</pre>
 
 <br/>
 <br/>
@@ -810,6 +801,21 @@ Excellence, then, is not an act, but a habit.</pre>
 <p class="author">Benjamin Franklin</p>
 <pre class="quote">
 Genius without education is like silver in the mine.</pre>
+
+<br/>
+<br/>
+
+<p class="author">Sophocles (Traduction de Marguerite Yourcenar)</p>
+<pre class="quote">
+L’amour, tendres amis, est pareil au glaçon
+Que parfois, dans la cour, ébloui, un garçon
+Ramasse émerveillé en une aube d’hiver
+Et sa paume est brûlée à ce miracle clair.
+Mais le fragile objet s’écoule et devient larmes
+Ainsi de nos amours, de leurs maux, de leurs charmes:
+Il ne reste bientôt du beau trésor perdu
+Qu’absence, que brûlure, et deuil du bien perdu.
+</pre>
 
 <br/>
 <br/>
