--- a/index.html
+++ b/index.html
@@ -727,8 +727,7 @@ The banner of the free!
 America! America!
 God shed His grace on thee
 Till nobler men keep once again
-Thy whiter jubilee!
-</pre>
+Thy whiter jubilee!</pre>
 
 <br/>
 
@@ -742,8 +741,7 @@ And ev'ry gain divine.
 America! America!
 God shed His grace on thee,
 And crown thy good with brotherhood
-From sea to shining sea.
-</pre>
+From sea to shining sea.</pre>
 
 <br/>
 <br/>
@@ -814,8 +812,7 @@ Et sa paume est brûlée à ce miracle clair.
 Mais le fragile objet s’écoule et devient larmes
 Ainsi de nos amours, de leurs maux, de leurs charmes:
 Il ne reste bientôt du beau trésor perdu
-Qu’absence, que brûlure, et deuil du bien perdu.
-</pre>
+Qu’absence, que brûlure, et deuil du bien perdu.</pre>
 
 <br/>
 <br/>
