--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <body>
+<div id="container">
+
+
 <div id="headline">
-  <h1>Unordered (and growing) list of quotations from sensible and often famous individuals that have struck a cord with me and which I try to remember</h1>
+  <h1>Unordered (growing) list of quotes I try to remember</h1>
 </div>
 
 <p class="author">Paul Valéry</p>
@@ -816,5 +819,52 @@ Qu’absence, que brûlure, et deuil du bien perdu.</pre>
 
 <br/>
 <br/>
+
+<p class="author">William of Ockham</p>
+<p class="book">Ockham's Razor</p>
+<p class="quote">
+Among competing hypotheses, the one with the fewest assumptions should be selected.</p>
+
+<br/>
+<br/>
+
+<p class="author">Mahatma Gandhi</p>
+<p class="book">Various</p>
+<p class="quote">
+Be the change that you want to see in the world.</p>
+<p class="quote">
+An ounce of practice is worth a thousand words.</p>
+<p class="quote">
+Live as if you were to die tomorrow. Learn as if you were to live forever.</p>
+<p class="quote">
+In a gentle way, you can shake the world.</p>
+<p class="quote">
+Strength does not come from physical capacity. It comes from an indomitable will.</p>
+<p class="quote">
+I object to violence because when it appears to do good, the good is only temporary; the evil it does is permanent.</p>
+
+<br/>
+<br/>
+
+<p class="author">Sénèque</p>
+<p class="book">Various</p>
+<p class="quote">
+Hâte-toi de bien vivre et songe que chaque jour est à lui seul une vie.</p>
+<p class="quote">
+Il est plus facile de se contenir que de se retirer d'une querelle.</p>
+<p class="quote">
+La colère est comme une avalanche qui se brise sur ce qu'elle brise.</p>
+<p class="quote">
+C'est quand on n'a plus d'espoir qu'il ne faut désespérer de rien.</p>
+<p class="quote">
+L'amitié est toujours profitable, l'amour est parfois nuisible.</p>
+<p class="quote">
+La plus grande partie de la vie passe à mal faire, une grande partie à ne rien faire, toute la vie à ne pas penser à ce que l'on fait.</p>
+
+<br/>
+<br/>
+
+
+</div>
 
 </body>
