--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,9 @@ Qu’absence, que brûlure, et deuil du bien perdu.</pre
 
     <p class="author">Amanda Gorman</p>
     <p class="book">The Hill We Climb</p>
+    <a class="comment" href="https://www.youtube.com/watch?v=Jp9pyMqnBzk"
+      >Recited at Joe Biden's inauguration</a
+    >
     <pre class="quote">
 When day comes we ask ourselves,
 where can we find light in this never-ending shade?
