--- a/index.html
+++ b/index.html
@@ -1188,5 +1188,22 @@ If only we're brave enough to be it.</pre
 
     <br />
     <br />
-  </div>
+
+    <p class="author">Sir James Brooke (afterwards Rajah of Sarawak)</p>
+    <p class="book">His Diary for July 1839</p>
+    <p class="comment">Epigraph in "The Lords of the Rim" (Sterling Seagrave)</p>
+    <pre class="quote">I know not whether most to admire the Chinese for their many virtues 
+or to despise them for their glaring defects… 
+their industry exceeds that of any other people on the face of the Earth, 
+they are laborious, patient and cheerful; 
+but on the other hand they are corrupt, supple and exacting, 
+yielding to their superiors and tyrannical to those who fall into their power.</pre
+>
+
+    <br />
+    <br />
+
+
+
+</div>
 </body>
